--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path_provider: ^2.1.4
   path: ^1.9.0
+  highlight_text: ^1.8.0
 
 dev_dependencies:
   flutter_test:
