--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   path_provider: ^2.1.4
   path: ^1.9.0
   highlight_text: ^1.8.0
+  shared_preferences: ^2.3.2
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
